--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!doctype html>
 <html>
-<meta http-equiv="refresh" content="0; url=https://fe48.pl">
+<meta http-equiv="refresh" content="0; url=https://vishop.pl/shop/1413/">
 </html>
