--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
 <html>
-<meta http-equiv="refresh" content="0; url=https://silenceapparels.com">
+<meta http-equiv="refresh" content="0; url=https://zlotytrakt.eu">
 </html>
+
